# dsl__projects__yassine

./: README.md
aria/: CMakeLists.txt  package.xml
aria/.svn/: wc.db
aria/Aria-2.8.1/: Changes.txt
aria/Aria-2.8.1/ArNetworking/: CommandLineOptions.txt  doxygen.conf
aria/Aria-2.8.1/ArNetworking/docs/: ArCentralForwarder_8h.html  ArCentralManager_8cpp.html  ArCentralManager_8h.html  ArClientFileUtils_8cpp.html  ArClientHandlerConfig_8cpp.html  ArClientHandlerConfig_8cpp.js  ArClientHandlerConfig_8h.html  ArClientSimpleConnector_8cpp.html  ArClientSwitchManager_8cpp.html  ArHybridForwarderVideo_8cpp.html  ArHybridForwarderVideo_8h.html  ArMapChanger_8cpp.html  ArNetPacketReceiverTcp_8cpp.html  ArNetPacketReceiverTcp_8h.html  ArNetPacketReceiverUdp_8cpp.html  ArNetPacketReceiverUdp_8h.html  ArNetPacketSenderTcp_8cpp.html  (+146 more)
aria/Aria-2.8.1/advanced/: amptuDemo.vcproj  sickAutoLogger.vcproj
aria/Aria-2.8.1/docs/: ArMD5Calculator_8h.html  LaserLogFileFormat.html  ParamFiles.html  actsColorFollowingExample_8cpp-example.html  cameraPTZExample_8cpp-example.html  classAr3DPoint-members.html  classArACTSBlob.html  classArACTS__1__2-members.html  classArAMPTU-members.html  classArAMPTUPacket-members.html  classArASyncTask-members.html  classArASyncTask.html  classArAction.html  classArActionAvoidFront.html  classArActionAvoidSide-members.html  classArActionColorFollow-members.html  classArActionConstantVelocity-members.html  classArActionConstantVelocity.html  classArActionDeceleratingLimiter-members.html  classArActionDesired-members.html  classArActionDesired.html  classArActionDesiredChannel-members.html  classArActionDriveDistance-members.html  classArActionDriveDistance.html  classArActionGoto.html  classArActionGotoStraight.html  classArActionGroup-members.html  classArActionGroupColorFollow-members.html  classArActionGroupColorFollow.html  classArActionGroupRatioDrive-members.html  classArActionGroupRatioDrive.html  classArActionGroupRatioDriveUnsafe-members.html  classArActionGroupStop-members.html  classArActionGroupTeleop-members.html  classArActionGroupTeleop.html  classArActionGroupUnguardedTeleop-members.html  classArActionGroupWander.html  classArActionInput-members.html  classArActionJoydrive-members.html  classArActionKeydrive-members.html  (+360 more)
aria/Aria-2.8.1/examples/: All_Examples-vc2003.sln  All_Examples-vc2010.sln  actionExample-vc2003.vcproj  actionExample-vc2008.vcproj  actionExample.cpp  actionGroupExample-vc2003.vcproj  actionGroupExample-vc2008.vcproj  actsColorFollowingExample-vc2008.vcproj  armExample-vc2003.vcproj  auxSerialExample-vc2003.vcproj  auxSerialExample.cpp  demo  demoStatic-vc2003.vcproj  directMotionExample-vc2008.vcproj  dpptuExample-vc2008.vcproj  functorExample-vc2003.vcproj  gotoActionExample-vc2003.vcproj  gpsExample-vc2003.vcproj  gripperExample-vc2003.vcproj  gripperExample.cpp  imuExample.cpp  ipthru-vc2012.vcxproj  joydriveActionExample-vc2008.vcproj  joydriveActionExample.cpp  joydriveThreaded-vc2008.vcproj  joydriveUserTask-vc2008.vcproj  lineFinderExample.cpp  mtxIO.cpp  netServerExample-vc2008.vcproj  robotConnectionCallbacks.cpp  sickLogger-vc2003.vcproj  sickLogger-vc2008.vcproj  sickLogger-vc2012.vcxproj  sickLoggerStatic-vc2003.vcproj  sickTeleop-vc2008.vcproj  simpleConnect-vc2003.vcproj  simpleConnect-vc2008.vcproj  socketClientExample-vc2003.vcproj  socketServerExample.cpp  soundsQueueExample-vc2003.vcproj  (+6 more)
aria/Aria-2.8.1/include/: ArBatteryConnector.h  ArLCDMTX.h  ArRobotConnector.h  ArSensorReading.h  ArSonarConnector.h
aria/Aria-2.8.1/java/: ArNetworkingJava.vcxproj  ArNetworkingJava_wrap.cpp  ArNetworkingSwigJava.vcxproj  AriaJava-vc2010.sln  AriaJava.sln  AriaJava.vcproj  makeJavaWin.sh
aria/Aria-2.8.1/python/: ArNetworkingPy.vcxproj  ArNetworkingPy_wrap.cpp  ArNetworkingPy_wrap.h  AriaPy-vc2003.sln  AriaPy-vc2012.sln  AriaPy_wrap.h
aria/Aria-2.8.1/src/: ArBatteryMTX.cpp  ArCondition_WIN.cpp  ArConfigArg.cpp  ArLCDConnector.cpp  ArLCDMTX.cpp  ArLaserLogger.cpp  ArMTXIO.cpp  ArMapComponents.cpp  ArMapUtils.cpp  ArRobotConnector.cpp  ArRobotParams.cpp  ArSonarConnector.cpp  AriaDLL-vc2003.vcproj  AriaDLL-vc2008.vcproj  AriaStatic-vc2010.vcxproj  AriaStatic.sln  ariaUtil.cpp
aria/Aria-2.8.1/tests/: AriaTests-vc2008.sln  mathTests.cpp  mutexLockWarning-vc2008.vcproj  sonarTest.cpp  timingTest-vc2008.vcproj
aria/Aria-2.8.1/utils/: genCommandLineOptionDocs.cpp  makeParams.vcxproj
asrl__common__library/: CMakeLists.txt  package.xml
asrl__common__library/.svn/: wc.db
asrl__common__library/include/asrl/: Id.hpp  rand1.hpp
asrl__common__library/python/asrl/: __init__.py
asrl__common__library/src/: filesystem_utilities.cpp
asrl__common__library/src/math/: homogeneous_coordinates.cpp  quaternion_algebra.cpp
asrl__common__library/src/math2/: SpecialEuclidean3.cpp  SpecialOrthogonal3.cpp  TransformationCov.cpp
asrl__common__library/src/python/: homogeneous_coordinates.cpp  quaternion_algebra.cpp  rotations.cpp  transformations.cpp
asrl__common__library/src/rosutil/: clahe.cpp  param.cpp
asrl__common__library/src/timing/: SimpleTimer.cpp
asrl__common__library/test/: TransformationTests.cpp  three_point_methods.cpp  transformations.cpp
asrl__robots__vehicle/: CMakeLists.txt  package.xml
asrl__robots__vehicle/.svn/: wc.db
clearpath_base/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
clearpath_base/nodes/: kinematic_node  raw_node  torque_node
clearpath_base/src/clearpath_node/: base.py  data.py
digi_realport_serial_ethernet/: CMakeLists.txt  Makefile  dgrp-1.9.spec  package.xml  source-info.txt
digi_realport_serial_ethernet/scripts/: dgrp-script-4.sh  dgrp-script-totalstation.sh
digi_realport_serial_ethernet/src/dgrp-1.9/: Makefile  config.status
digi_realport_serial_ethernet/src/dgrp-1.9_old/: Makefile  Makefile.inc  README  config.status  release_notes.txt
xboxdrv_linux/: CMakeLists.txt  source_info.txt
xboxdrv_linux/.svn/: wc.db
xboxdrv_linux/scripts/: start_xbox360.sh
xboxdrv_linux/src/xboxdrv-linux-0.5.0_asrl/: .sconsign.dblite  SConstruct
(+382 files in other folders)
