<package>

  <!-- REQUIRED HEADER -->

  <name>asrl__robots__vehicle</name>
  <version>1.0.0</version>
  <maintainer email="a@a.com">Paul Furgale</maintainer>
  <description>
     asrl_vehicle - Common files for the ASRL vehicle interface
  </description>
  <license>BSD</license>

  <!-- ADDITIONAL HEADER -->

  <author>Paul Furgale</author>
  <url>http://ros.org/wiki/asrl_vehicle</url>

  <!-- DEPENDS -->

  <!--rosdep name="wxwidgets"/-->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>asrl__common__library</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <!--build_depend>sound_play</build_depend-->
  <build_depend>tf</build_depend>
  <!--build_depend>gamepad_control</build_depend-->

  <run_depend>asrl__common__library</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <!--run_depend>sound_play</run_depend-->
  <run_depend>tf</run_depend>
  <!--run_depend>gamepad_control</run_depend-->

</package>


