<?xml version="1.0"?>
<package>
  <name>clearpath_base</name>
  <version>0.4.4</version>
  <description>
     Serial interface for Clearpath Robotics Husky.
  </description>
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>
  <maintainer email="abencz@clearpathrobotics.com">Alex Bencz</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/clearpath_base</url>

  <!-- Versions of catkin and message generation which resolve a bug in building messages.
       See: https://github.com/ros/genmsg/issues/34 -->
  <buildtool_depend version_gte="0.5.74">catkin</buildtool_depend>
  <build_depend version_gte="0.4.23">genmsg</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pkg-config</run_depend>
  <run_depend>python-serial</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
